--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node app.ts",
+    "start": "nodemon --exec ts-node app.ts",
     "test": "jest"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "chromedriver": "^101.0.0",
     "express": "^4.18.1",
     "nedb": "^1.8.0",
+    "nodemon": "^2.0.16",
     "selenium-webdriver": "^4.1.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
