--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/chromedriver": "^81.0.1",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nedb": "^1.8.12",
     "@types/selenium-webdriver": "^4.1.0",
+    "bcrypt": "^5.0.1",
     "chromedriver": "^101.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
