--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/chromedriver": "^81.0.1",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/nedb": "^1.8.12",
     "@types/selenium-webdriver": "^4.1.0",
     "bcrypt": "^5.0.1",
     "chromedriver": "^101.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
