--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mysql": "^2.15.21",
     "@types/nedb": "^1.8.12",
     "@types/selenium-webdriver": "^4.1.0",
     "bcrypt": "^5.0.1",
@@ -23,6 +24,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nedb": "^1.8.0",
     "nodemon": "^2.0.16",
     "selenium-webdriver": "^4.1.2",
