--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mysql": "^2.15.21",
     "@types/nedb": "^1.8.12",
+    "@types/node-schedule": "^2.1.0",
     "@types/selenium-webdriver": "^4.1.0",
     "bcrypt": "^5.0.1",
     "chromedriver": "^101.0.0",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nedb": "^1.8.0",
+    "node-schedule": "^2.1.0",
     "nodemon": "^2.0.16",
     "selenium-webdriver": "^4.1.2",
     "ts-node": "^10.8.0",
