--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "@types/chromedriver": "^81.0.1",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-graphql": "^0.9.0",
+    "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/mysql": "^2.15.21",
     "@types/nedb": "^1.8.12",
@@ -24,6 +26,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "nedb": "^1.8.0",
