--- a/client/package.json
+++ b/client/package.json
@@ -12,17 +12,27 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^16.11.40",
     "@types/react": "^18.0.12",
+    "@types/react-beforeunload": "^2.1.1",
     "@types/react-bootstrap": "^0.32.30",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-persist": "^4.3.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-beforeunload": "^2.5.3",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.4.20",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
