--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.7",
     "@iconify/react": "^3.2.2",
+    "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.93",
     "@mui/material": "^5.9.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -32,6 +33,7 @@
     "@types/redux-persist": "^4.3.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beforeunload": "^2.5.3",
@@ -47,6 +49,7 @@
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "simplebar-react": "^2.4.1",
     "sweetalert2": "^11.4.20",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
