--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/nedb": "^1.8.12",
     "@types/node-schedule": "^2.1.0",
     "@types/selenium-webdriver": "^4.1.2",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "chromedriver": "^104.0.0",
     "cors": "^2.8.5",
@@ -34,11 +35,10 @@
     "node-schedule": "^2.1.0",
     "nodemon": "^2.0.16",
     "selenium-webdriver": "^4.3.1",
-    "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.1",
+    "@types/jest": "^27.5.2",
     "jest": "^28.1.0",
     "ts-jest": "^28.0.3"
   }
