--- a/client/package.json
+++ b/client/package.json
@@ -32,11 +32,13 @@
     "@types/redux-persist": "^4.3.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "chartjs": "^0.3.24",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-beforeunload": "^2.5.3",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.34.0",
