--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@types/selenium-webdriver": "^4.1.2",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "check-disk-space": "^3.3.1",
     "chromedriver": "^104.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
