--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chartjs": "^0.3.24",
+    "chartjs-plugin-annotation": "^2.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "react": "^18.2.0",
