--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-persist": "^4.3.1",
+    "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "chartjs": "^0.3.24",
@@ -52,6 +53,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
     "simplebar-react": "^2.4.1",
+    "styled-components": "^5.3.6",
     "sweetalert2": "^11.4.20",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4",
